--- a/pkg/network/tracer/testutil/kafka/testdata/docker-compose.yml
+++ b/pkg/network/tracer/testutil/kafka/testdata/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   zoo1:
-    image: confluentinc/cp-zookeeper:7.2.1
+    image: public.ecr.aws/b1o7r7e0/usm-test/zookeeper
     hostname: zoo1
     container_name: zoo1
     ports:
@@ -14,7 +14,7 @@ services:
       KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=*"
 
   kafka1:
-    image: confluentinc/cp-kafka:7.2.1
+    image: public.ecr.aws/b1o7r7e0/usm-test/kafka
     hostname: kafka1
     container_name: kafka1
     ports:
